test/spec_vectors/simd_i16x8_arith2/fail/module_19.wat
(module (func $i16x8.abs-arg-empty (result v128) (i16x8.abs)))